ui: fix team long name overflow

--- a/web/src/app/components/name/name.component.scss
+++ b/web/src/app/components/name/name.component.scss
@@ -2,6 +2,8 @@
   border-width: medium;
   border-style: solid;
   border-radius: 8px;
+  overflow: hidden;
+  white-space: nowrap;
   div {
     display: flex;
     justify-content: center; /* align horizontal */
